--- a/core/assets/bundles/bundle_ru.properties
+++ b/core/assets/bundles/bundle_ru.properties
@@ -155,7 +155,7 @@ players.search = поиск
 players.notfound = [gray]игроки не найдены
 server.closing = [accent]Закрытие сервера…
 server.kicked.kick = Вас выгнали с сервера!
-server.kicked.whitelist = Вы не в белом списке сервера.
+server.kicked.whitelist = Вы не в списке допустимых игроков сервера.
 server.kicked.serverClose = Сервер закрыт.
 server.kicked.vote = Вы были выгнаны с помощью голосования. Прощайте.
 server.kicked.clientOutdated = Устаревший клиент! Обновите игру!
